# docs/swagger.json
@@ -5,17 +5,58 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "Testing Swagger APIs.",
+        "description": "Sales Service APIs.",
         "title": "SalesService APIs",
-        "termsOfService": "http://swagger.io/terms/// @contact.name API Support",
         "contact": {
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "RoVe SaaS Support",
+            "email": "rovesaas@gmail.com"
         },
         "version": "1.0"
     },
     "paths": {
         "/api/customer/": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get All Customers for Tenant.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get All Customers for Tenant",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/db.Customer"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -53,6 +94,75 @@
                     }
                 }
             }
+        },
+        "/api/customer/{customerid}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get a Customer by ID for Tenant.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get a Customer by ID for Tenant",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Customer ID",
+                        "name": "customerid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/db.Customer"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete a Customer by ID for Tenant.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Delete a Customer by ID for Tenant",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Customer ID",
+                        "name": "customerid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -60,28 +170,52 @@
             "type": "object",
             "properties": {
                 "customer_address": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
+                },
+                "customer_app_size": {
+                    "type": "string"
+                },
+                "customer_app_type": {
+                    "type": "string"
                 },
                 "customer_city": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "customer_country": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "customer_id": {
                     "type": "string"
                 },
                 "customer_name": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
+                },
+                "customer_primary_email": {
+                    "type": "string"
+                },
+                "customer_primary_phone": {
+                    "type": "string"
+                },
+                "customer_reference": {
+                    "type": "string"
+                },
+                "customer_secondary_email": {
+                    "type": "string"
+                },
+                "customer_secondary_phone": {
+                    "type": "string"
                 },
                 "customer_state": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "customer_status": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "customer_total_value": {
-                    "$ref": "#/definitions/sql.NullInt64"
+                    "type": "integer"
+                },
+                "customer_uuid": {
+                    "type": "string"
                 },
                 "tenant_id": {
                     "type": "string"
@@ -94,13 +228,37 @@
                 "customer_address": {
                     "type": "string"
                 },
+                "customer_app_size": {
+                    "type": "string"
+                },
+                "customer_app_type": {
+                    "type": "string"
+                },
                 "customer_city": {
                     "type": "string"
                 },
                 "customer_country": {
                     "type": "string"
                 },
+                "customer_id": {
+                    "type": "string"
+                },
                 "customer_name": {
+                    "type": "string"
+                },
+                "customer_primary_email": {
+                    "type": "string"
+                },
+                "customer_primary_phone": {
+                    "type": "string"
+                },
+                "customer_reference": {
+                    "type": "string"
+                },
+                "customer_secondary_email": {
+                    "type": "string"
+                },
+                "customer_secondary_phone": {
                     "type": "string"
                 },
                 "customer_state": {
@@ -111,30 +269,6 @@
                 },
                 "customer_total_value": {
                     "type": "integer"
-                }
-            }
-        },
-        "sql.NullInt64": {
-            "type": "object",
-            "properties": {
-                "int64": {
-                    "type": "integer"
-                },
-                "valid": {
-                    "description": "Valid is true if Int64 is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "sql.NullString": {
-            "type": "object",
-            "properties": {
-                "string": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if String is not NULL",
-                    "type": "boolean"
                 }
             }
         }
